welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:1: error: Missing closing brace `}' assumed here
def golomb(num:Int): Int = {
^golomb:2: error: Missing closing brace `}' assumed here
var x=0
^golomb:3: error: expected class or object definition
for (i<-1 to num){
^