welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
var x=0
for (i<-1 to num){
    
	

